chore: refactor tooling libs for compiler availability
Signed-off-by: Sam Gammon <sam@elide.dev>